5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3994/executions/1838_2603.log
== TEST (2019-06-26 12:34:40) 
-- CODE:
from numpy import*
j = array(eval(input("a:")))
for j in range(4):
	v=zeros(4)
	k=0
	for i in range(4):
		v[k]= m[i,j]
	v= sorted(v, reverse = True)
	k=0
	for i in range(4):
		m[i,j]= v[k]
		k = k+1
print(m)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 12:34:46) 
-- CODE:
from numpy import*
j = array(eval(input("a:")))
for j in range(4):
	v=zeros(4)
	k=0
	for i in range(4):
		v[k]= m[i,j]
	v= sorted(v, reverse = True)
	k=0
	for i in range(4):
		m[i,j]= v[k]
		k = k+1
print(m)

	
-- EXECUTION TIME:
0.853099
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1838/2603/main.py", line 7, in <module>
    v[k]= m[i,j]
NameError: name 'm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 12:35:27) 
-- CODE:
from numpy import*
j = array(eval(input("a:")))
for j in range(4):
	v=zeros(4)
	k=0
	for i in range(4):
		v[k]= j[i,j]
	v= sorted(v, reverse = True)
	k=0
	for i in range(4):
		j[i,j]= v[k]
		k = k+1
print(m)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 12:35:43) 
-- CODE:
from numpy import*
j = array(eval(input("a:")))
for j in range(4):
	v=zeros(4)
	k=0
	for i in range(4):
		v[k]= j[i,j]
	v= sorted(v, reverse = True)
	k=0
	for i in range(4):
		j[i,j]= v[k]
		k = k+1
print(m)

	
-- EXECUTION TIME:
1.02673
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1838/2603/main.py", line 7, in <module>
    v[k]= j[i,j]
TypeError: 'int' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 12:36:08) 
-- CODE:
from numpy import*
j = array(eval(input("a:")))
for j in range(4):
	v=zeros(4)
	k=0
	for i in range(4):
		v[k]= j[i,j]
	v= sorted(v, reverse = True)
	k=0
	for i in range(4):
		j[i,j]= v[k]
		k = k+1
print(m)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 12:39:53) 
-- CODE:
from numpy import*
b = array(eval(input("a:")))
for j in range(4):
	v=zeros(4)
	k=0
	for i in range(4):
		v[k]= b[i,j]
		k = k+1
	v= sorted(v, reverse = True)
	k=0
	for i in range(4):
		b[i,j]= v[k]
		k = k+1
print(b)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 12:39:56) 
-- CODE:
from numpy import*
b = array(eval(input("a:")))
for j in range(4):
	v=zeros(4)
	k=0
	for i in range(4):
		v[k]= b[i,j]
		k = k+1
	v= sorted(v, reverse = True)
	k=0
	for i in range(4):
		b[i,j]= v[k]
		k = k+1
print(b)

	
-- EXECUTION TIME:
0.871125
-- TEST CASE 1:
---- input:
[[1,1,1,1],[2,2,2,2],[3,3,3,3],[4,4,4,4]]
---- correct output:
[[4 4 4 4]
[3 3 3 3]
[2 2 2 2]
[1 1 1 1]]
---- user output:
[[4 4 4 4]
 [3 3 3 3]
 [2 2 2 2]
 [1 1 1 1]]
-- TEST CASE 2:
---- input:
[[4,1,1,3],[3,2,2,3],[2,3,3,3],[1,4,4,3]]
---- correct output:
[[4 4 4 3]
[3 3 3 3]
[2 2 2 3]
[1 1 1 3]]
---- user output:
[[4 4 4 3]
 [3 3 3 3]
 [2 2 2 3]
 [1 1 1 3]]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
